# unofficial-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh  scratch_traceback.txt
app/: schemas.py  server.py
app/routers/: deepseek.py  gemini.py  notebooklm.py
app/routers/deepseek/: routes.py
app/routers/gemini/: __init__.py  chat.py  gems.py  helpers.py  history.py  models.py  research.py  router.py
app/routers/grok/: __init__.py  chat.py  helpers.py  models.py
app/routers/metaai/: __init__.py  chat.py  generation.py  helpers.py  models.py  router.py
app/routers/notebooklm/: __init__.py  artifacts.py  chat.py  helpers.py  mind_maps.py  notebooks.py  notes.py  research.py  settings.py  sharing.py  sources.py
core/: schemas.py  server.py  stream.py  utils.py
core/routers/deepseek/: route.py  routes.py
core/routers/gemini/: chat.py  models.py
core/routers/grok/: chat.py  client.py  helpers.py  router.py
core/routers/keys/: route.py
core/routers/metaai/: chat.py  generation.py
core/routers/notebooklm/: __init__.py  artifacts.py  chat.py  helpers.py  mind_maps.py  models.py  notes.py  research.py  router.py  (+3 more)
core/session/: __init__.py  api_key.py  history.py  manager.py  middleware.py  store.py
docs/: ARCHITECTURE.md  CONVERSION.md  auth.md  deepseek.md  gemini.md  grok.md  metaai.md  notebooklm-artifacts.md  notebooklm.md
skills/: README.md
skills/unofficial-api/: SKILL.md
skills/unofficial-api-chat/: SKILL.md
skills/unofficial-api-session-arch/: SKILL.md
tests/: conftest.py  test_deepseek.py  test_gemini.py  test_grok.py  test_health.py  test_metaai.py  test_notebooklm.py  test_schemas.py  test_session.py
(+7 files in other folders)
