[project]
name = "unofficial-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.9.0",
    "curl-cffi>=0.15.0",
    "fastapi[standard]>=0.138.0",
    "grokweb-to-api",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.1.1",
    "notebooklm-py",
    "orjson>=3.11.7",
    "python-multipart>=0.0.21",
    "requests>=2.34.2",
    "requests-html>=0.10.0",
    "wasmtime>=45.0.0",
]

[tool.uv.sources]
grokweb-to-api = { path = "GrokWeb-to-API" }
notebooklm-py = { path = "notebooklm-py" }

# How SDKs are included:
#   sys.path in server.py (no pip): DeepSeek, Gemini, Meta AI
#   pip local path: Grok (importlib.metadata.version), NotebookLM (vendored)
[dependency-groups]
dev = []
